# chat-gpt-line

./: Cargo.toml  Readme.md  t1.txt
src/: g_bot.rs  g_config.rs  main.rs
