[package]
name = "chat-gpt-line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = {version="4.1.8"}
dirs = "4.0.0"
futures = "0.3.27"
libc = "0.2.140"
md5 = "0.7.0"
nix = "0.26.2"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.94"
serde_yaml = "0.9.19"
telegram-bot = "0.8.0"
tokio = {version="1.26.0", features=["full"]}
winapi = "0.3.9"

